deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onyx-ifem
  labels:
    app.kubernetes.io/name: onyx-ifem
    onyx-ifem.io/access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
