deploy/kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: onyx-ifem
spec:
  replicas: 1
  serviceName: onyx-ifem-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: onyx-ifem
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: onyx-ifem
    spec:
      automountServiceAccountToken: false
      serviceAccountName: onyx-ifem
      terminationGracePeriodSeconds: 150
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: onyx-ifem
          image: ghcr.io/lamatech-dev/onyx-ifem:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 2
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            failureThreshold: 2
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 4
            periodSeconds: 15
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /var/lib/onyx
              name: data
            - mountPath: /run/secrets
              name: auth
              readOnly: true
      volumes:
        - name: auth
          secret:
            defaultMode: 0444
            secretName: onyx-ifem-auth
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
