deploy/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: onyx-ifem-headless
spec:
  clusterIP: None
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: onyx-ifem
---
apiVersion: v1
kind: Service
metadata:
  name: onyx-ifem
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "3000"
    prometheus.io/scrape: "true"
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: onyx-ifem
  type: ClusterIP
